--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.210.0",
-    "@aws-sdk/credential-provider-node": "^3.210.0",
-    "@aws-sdk/s3-presigned-post": "^3.210.0",
     "aws-sdk": "2.879",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "fetch": "^1.1.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "name": "back",
   "version": "1.0.0",
